<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2d2d2d"

    tools:context="com.robinsonprogramming.www.loginrestapi.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:background="#2d2d2d"
        android:paddingRight="24dp">

        <RelativeLayout

            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2d2d2d"
            android:elevation="2dp"
            android:visibility="gone"

            android:gravity="center">

            <ProgressBar

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:elevation="10dp"
                android:background="@drawable/rounded_corners"
                android:indeterminate="true" />
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/editText_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#dcdcdc"
                android:textColorHint="#dcdcdc"
                android:hint="Login" />
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:weightSum="2"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/editText_login_password"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#dcdcdc"
                android:textColorHint="#dcdcdc"
                android:hint="@string/Password"/>
            <Button
                android:id="@+id/button_login_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText_login_password"
                android:background="@drawable/button"
                android:layout_marginTop="41dp"
                android:text="@string/Login" />

            <Button
                android:id="@+id/button_login_register"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button_login_login"
                android:layout_marginEnd="196dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="196dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/Register" />

            <Button
                android:id="@+id/button_login_reminder"
                android:layout_width="143dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/Reminder" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
