<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.robinsonprogramming.www.loginrestapi.MyAccount">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:background="#2d2d2d"
        android:paddingRight="24dp">

        <EditText
            android:id="@+id/editText1myAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColorHint="#dcdcdc"

            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:visibility="visible"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="275dp" />

        <EditText
            android:id="@+id/editText2myAccount"
            android:layout_below="@+id/editText1myAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#dcdcdc"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="New Password"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="342dp" />

        <EditText
            android:id="@+id/editText3myAccount"
            android:layout_below="@+id/editText2myAccount"
            android:layout_width="match_parent"
            android:textColorHint="#dcdcdc"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"

            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/retype_new_password"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="342dp" />

        <Button
            android:id="@+id/buttonMyAccount"
            android:layout_below="@+id/editText3myAccount"
            android:layout_width="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:background="@drawable/button"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="406dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
